--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">Barcode scanner</string>
+    <string name="name">Name</string>
+    <string name="mi_number">MI Number</string>
+    <string name="email">Email</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="gender">Gender</string>
+    <string name="year_of_study">Year of Study</string>
+    <string name="present_city">Present City</string>
+    <string name="present_college">Present College</string>
+    <string name="scan">Scan</string>
 </resources>
